--- a/src/styles/blocks/events.scss
+++ b/src/styles/blocks/events.scss
@@ -6,16 +6,24 @@
   &__item {
     margin-bottom: 60px;
 
-    &--center {
-      margin-bottom: 0;
-    }
-
     @include onTablet {
       margin-bottom: 50px;
     }
 
     @include onDesktop {
       margin-bottom: 100px;
+    }
+
+    &--center {
+      margin-bottom: 100px;
+
+      @include onTablet {
+        margin-bottom: 90px;
+      }
+
+      @include onDesktop {
+        margin-bottom: 200px;
+      }
     }
   }
 }
