--- a/src/styles/blocks/nav.scss
+++ b/src/styles/blocks/nav.scss
@@ -18,7 +18,7 @@
   }
 
   &__item {
-    margin-bottom: 30px;
+    margin-bottom: 15px;
 
     @include onDesktop {
       margin-bottom: 0;
@@ -26,11 +26,16 @@
   }
 
   &__list {
+    margin-top: 20px;
+    margin-left: 20px;
+
     @include onDesktop {
       grid-template-columns: repeat(8, auto);
       display: grid;
       justify-content: center;
       gap: 10px;
+      margin-top: 0;
+      margin-left: 0;
     }
   }
 
@@ -42,7 +47,7 @@
     font-size: 14px;
     padding: 10px 15px;
     border-radius: 15px;
-    transition: all $duration;
+    transition: background-color $duration;
     text-align: center;
 
     &:hover {
