--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -3,6 +3,7 @@
 @import "./utils/normalize";
 
 @import "./blocks/container";
+@import "./blocks/logo";
 @import "./blocks/header";
 @import "./blocks/nav";
 @import "./blocks/main-page";
@@ -10,3 +11,10 @@
 @import "./blocks/main-title";
 @import "./blocks/events";
 @import "./blocks/event";
+@import "./blocks/gallery";
+@import "./blocks/subscription";
+@import "./blocks/form";
+@import "./blocks/footer";
+@import "./blocks/social";
+@import "./blocks/info";
+@import "./blocks/copyright";
