--- a/src/styles/utils/_vars.scss
+++ b/src/styles/utils/_vars.scss
@@ -18,5 +18,6 @@ $navHoverColor: #ffffff28;
 $darkGrey: #4e4e4e;
 $whiteColor: #fff;
 $redColor: #f14a27;
+$lightRedColor: #ff5b3a;
 $blackColor: #000;
 $fontMontserrat: "Montserrat", "Arial", "Helvetica", sans-serif;
