--- a/src/styles/blocks/event.scss
+++ b/src/styles/blocks/event.scss
@@ -30,12 +30,24 @@
     }
 
     &--left {
+      transition: transform $duration;
+
+      &:hover {
+        transform: scale(1.04);
+      }
+      
       @include onDesktop {
         margin-right: 130px;
       }
     }
 
     &--right {
+      transition: transform $duration;
+
+      &:hover {
+        transform: scale(1.04);
+      }
+
       @include onDesktop {
         margin-left: 130px;
       }
