--- a/src/styles/blocks/gallery.scss
+++ b/src/styles/blocks/gallery.scss
@@ -34,7 +34,11 @@
 
   &__photo {
     width: 100%;
-
+    transition: transform $duration;
+    
+    &:hover {
+      transform: scale(1.04);
+    }
     &:nth-of-type(2),
     &:nth-of-type(4) {
       @include onTablet {
