--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -7,6 +7,8 @@
 @import "./blocks/background.scss";
 @import "./blocks/gallery.scss";
 @import "./blocks/subscribe.scss";
+@import "./blocks/footer.scss";
+@import "./blocks/revelant.scss";
 
 body {
   background: $c-gray;
