--- a/src/styles/_reset.scss
+++ b/src/styles/_reset.scss
@@ -63,4 +63,5 @@ input {
   text-rendering: optimizeLegibility;
   -webkit-font-smoothing: antialiased;
   text-size-adjust: none;
+  scroll-behavior: smooth;
 }
