--- a/src/styles/blocks/events.scss
+++ b/src/styles/blocks/events.scss
@@ -3,6 +3,11 @@
 
   &__img {
     width: 870px;
+    transition: 0.2s ease-in-out;
+
+    &:hover {
+      transform: scale(0.9);
+    }
   }
 
   &__title {
