--- a/src/styles/blocks/follow.scss
+++ b/src/styles/blocks/follow.scss
@@ -1,10 +1,14 @@
 .follow {
+  height: 650px;
   background: url(..\images\Follow.png);
+  background-repeat: no-repeat;
+  background-position: 50%;
+  background-size: cover;
+
   display: grid;
   justify-items: center;
   align-content: center;
   gap: 66px;
-  height: 380px;
 
   color: #fff;
 
@@ -38,17 +42,6 @@
     font-weight: normal;
     font-size: 14px;
     line-height: 14px;
-    transition: 0.2s ease-in-out;
-
-    &:hover {
-      background-color: #fff;
-      box-shadow: 0 6px 23px rgba(218, 213, 209, 0.8);
-    }
-
-    &:focus {
-      background-color: #fff;
-      box-shadow: 0 6px 23px rgba(218, 213, 209, 0.8);
-    }
   }
 
   &__button {
@@ -57,16 +50,14 @@
     background-color: #f14a27;
     color: #000;
     border: 1px solid #f14a27;
-
-    &:hover {
-      background-color: #ff4a27;
-      box-shadow: 0 6px 23px rgba(218, 213, 209, 0.8);
-    }
+    cursor: pointer;
   }
 }
 
 @media (max-width: 950px) {
   .follow {
+    height: 550px;
+
     &__input {
       width: 233px;
       height: 50px;
