--- a/src/styles/blocks/footer.scss
+++ b/src/styles/blocks/footer.scss
@@ -1,9 +1,5 @@
 .footer {
-
-  &__section {
-    margin: 0 auto;
-  }
-
+  font-family: "IBM Plex Sans", sans-serif;
   font-size: 14px;
   line-height: 21px;
   font-weight: normal;
@@ -34,6 +30,8 @@
     font-weight: bold;
     font-size: 36px;
     line-height: 36px;
+    text-decoration: none;
+    color: #0f0e08;
   }
 
   &__socials {
@@ -89,18 +87,18 @@
   }
 }
 
-@media (max-width: 500px) {
+@media (max-width: 550px) {
   .footer {
 
     &__info {
       grid-template-columns: 1fr;
       grid-template-rows: 2fr 1fr;
-
+      margin: 0;
     }
 
     &__icons {
       display: flex;
-      justify-content: space-between;
+      justify-content: space-around;
       align-items: center;
       margin-bottom: 40px;
 
