--- a/src/styles/blocks/header.scss
+++ b/src/styles/blocks/header.scss
@@ -76,6 +76,13 @@
   &__link-text {
     padding: 27px 43px;
     border: 1px solid #1a5a4c;
+    transition: 0.3s;
+
+    &:hover {
+      color: #fff;
+      background-color: #1a5a4c;
+
+    }
   }
 
   &__link-arrow {
@@ -153,12 +160,14 @@
     }
 
     &__left {
-      padding: 0 170px;
+      top: 0;
+      right: 169px;
+      padding: 0;
     }
 
     &__title {
       font-size: 45px;
-      text-align: end;
+      text-align: center;
     }
 
     &__title-transparent {
