--- a/src/styles/blocks/gallery.scss
+++ b/src/styles/blocks/gallery.scss
@@ -25,14 +25,13 @@
     margin-bottom: 200px;
   }
 
-  // &__img {
-  //   // transition: transform $transition-time ease-in-out;
+  &__img {
+    transition: 0.2s ease-in-out;
 
-  //   &:hover {
-  //     // transform: translate(-10px, 20px);
-  //     // box-shadow: 0 10px 30px 5px rgb(37, 24, 24);
-  //   }
-  // }
+    &:hover {
+      transform: scale(0.9);
+    }
+  }
 
   &__img--position-top-left {
     grid-area: top-left;
@@ -59,7 +58,7 @@
   }
 }
 
-@media (max-width: 1440px) {
+@media (max-width: 1600px) {
   .gallery {
     padding: 200px auto 0;
 
@@ -78,13 +77,7 @@
   }
 }
 
-@media (max-width: 1280px) {
-  .gallery {
-    padding: 200px 75px 0;
-  }
-}
-
-@media (max-width: 900px) {
+@media (max-width: 1200px) {
   .gallery {
     padding: 0 0 0 10px;
 
