--- a/src/styles/blocks/header.scss
+++ b/src/styles/blocks/header.scss
@@ -92,6 +92,7 @@
     color: white;
     background-color: #1a5a4c;
     transition: transform 0.3s;
+    cursor: pointer;
 
     &:hover {
       transform: scale(1.2);
