--- a/src/styles/blocks/revelant.scss
+++ b/src/styles/blocks/revelant.scss
@@ -2,6 +2,10 @@
   max-width: 1170px;
   margin: 0 auto;
 
+  @media (max-width: 700px) {
+    margin-top: 300px;
+  }
+
   @media (min-width: 1600px) {
     max-width: 1570px;
   }
