--- a/src/styles/blocks/content.scss
+++ b/src/styles/blocks/content.scss
@@ -3,4 +3,12 @@
   &__current {
     margin: 0 auto;
   }
+
+  &__gallery {
+    margin: 0 auto;
+  }
+
+  &__footer {
+    margin: 100px auto;
+  }
 }
