--- a/src/styles/blocks/header.scss
+++ b/src/styles/blocks/header.scss
@@ -4,16 +4,17 @@
   height: 655px;
 
   @media (max-width: 1920px) {
-    // padding-left: 55px;
+    padding-left: 55px;
   }
 
   @media (max-width: 1000px) {
     height: 384px;
-    // padding-left: 20px;
+    padding-left: 35px;
   }
 
   @media (max-width: 621px) {
     height: 515px;
+    padding-left: 20px;
   }
 
   &__hamburger-wrapper {
@@ -68,13 +69,10 @@
     right: 0;
     width: 60%;
     height: 655px;
-    background-image: url("../images/header1920.png");
+    background-image: url("../images/headerbg.jfif");
+    background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
-
-    @media (max-width: 1500px) {
-      background-image: url("../images/header.png");
-    }
 
     @media (max-width: 1000px) {
       height: 384px;
@@ -134,6 +132,8 @@
   }
 
   &__tickets-wrapper {
+    text-decoration: none;
+    color: #000;
     position: absolute;
     bottom: 120px;
     left: -299px;
@@ -146,8 +146,10 @@
 
     @media (max-width: 621px) {
       bottom: -210px;
-      left: 10%;
-      right: 10%;
+      left: 0;
+      right: 0;
+      width: 296px;
+      margin: 0 auto;
     }
   }
 
@@ -170,10 +172,6 @@
     align-items: center;
     background-color: #1a5a4c;
     width: 70px;
-
-    @media (max-width: 621px) {
-      width: 100%;
-    }
 
     &-vector {
       background-image: url("../images/vector.svg");
