--- a/src/styles/blocks/lecture.scss
+++ b/src/styles/blocks/lecture.scss
@@ -28,8 +28,9 @@
       height: 390px;
     }
 
-    @media (max-width: 1000px) {
+    @media (max-width: 621px) {
       height: 210px;
+      margin-bottom: 190px;
     }
 
   }
