--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,4 +1,3 @@
-@import "utils";
 @import "reset";
 
 @import "./blocks/header";
@@ -7,3 +6,6 @@
 @import "./blocks/current";
 @import "./blocks/event";
 @import "./blocks/lecture";
+@import "./blocks/gallery";
+@import "./blocks/subscription";
+@import "./blocks/footer";
