--- a/src/styles/reset.scss
+++ b/src/styles/reset.scss
@@ -6,7 +6,12 @@ body,
 h1,
 h2,
 h3,
-p {
+p,
+button,
+input,
+form,
+ul,
+li {
   margin: 0;
   padding: 0;
 }
@@ -14,7 +19,8 @@ p {
 h1,
 h2,
 h3,
-a {
+a,
+li {
   font-family: "Montserrat", sans-serif;
 }
 
