--- a/src/styles/blocks/background.scss
+++ b/src/styles/blocks/background.scss
@@ -35,7 +35,14 @@
     transition: transform 0.5s ;
     &:hover {
       transform: scale(1.2);
+    }
 
+    @media (max-width: 750px) {
+      width: 278px;
+      height: 154px;
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
     }
 
     &-title {
@@ -48,6 +55,18 @@
       font-weight: 400;
       text-decoration: none;
       color: #000;
+
+      @media (max-width: 750px) {
+        margin-left: 10px;
+        margin-top: 40px;
+        position: relative;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        font-size: 28px;
+        top: 0;
+        left: 0;
+      }
     }
   }
 }
@@ -56,6 +75,10 @@
   margin-top: 45px;
   display: flex;
   justify-content: space-evenly;
+
+  @media (max-width: 750px) {
+    margin-top: 10px;
+  }
   &__text {
     text-decoration: none;
     font-size: 14px;
