--- a/src/styles/blocks/footer.scss
+++ b/src/styles/blocks/footer.scss
@@ -14,7 +14,7 @@
 
   &__left {
     display: grid;
-    grid-template-columns: 0.5fr 1fr 1fr;
+    grid-template-columns: 0.2fr 1fr;
   }
 
   &__border {
@@ -71,6 +71,11 @@
       background-size: cover;
     }
   }
+}
+
+.field {
+  display: flex;
+  justify-content: space-between;
 }
 
 .rota {
@@ -141,30 +146,9 @@
   height: 35px;
 }
 
-@media (max-width: 750px) {
-  .footer {
-    max-width: 300px;
-  }
-
-  .wrap {
-    grid-template-columns: 1fr;
-
-    &__border {
-      margin: 46px 0 50px;
-      justify-self: center;
-      width: 460px;
-      height: 1px;
-    }
-
-    &__right {
-      justify-items: center;
-    }
-  }
-}
-
 @media (max-width:1200px) {
   .footer {
-    max-width: 700px;
+    width: 93%;
   }
 
   .wrap {
@@ -178,13 +162,91 @@
     }
 
     &__right {
-      justify-items: center;
+      display: flex;
+      flex-wrap: wrap;
+      justify-content: space-around;
     }
+  }
+
+  .field {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+  }
+
+  .contacts {
+    padding-right: 0;
+  }
+
+  .menu {
+    padding-left: 0;
   }
 }
 
 @media (min-width: 1600px) {
   .footer {
     max-width: 1570px;
+  }
+}
+
+@media (max-width: 750px) {
+  .footer {
+    width: 93%;
+  }
+
+  .wrap {
+    grid-template-columns: 1fr;
+
+    &__left {
+      grid-template-columns: 1fr;
+    }
+
+    .icons {
+      display: flex;
+      flex-direction: space-between;
+
+      &__link {
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        margin-bottom: 43px;
+        gap: 36px;
+      }
+    }
+
+    &__border {
+      margin: 46px 0 50px;
+      justify-self: center;
+      width: 95%;
+      height: 1px;
+    }
+
+    &__right {
+      display: flex;
+      justify-content: space-between;
+    }
+  }
+
+  .field {
+    display: flex;
+    flex-wrap: nowrap;
+    justify-content: space-between;
+    align-items: flex-start;
+    gap: 10px;
+  }
+
+  .rota {
+    flex-wrap: wrap;
+  }
+
+  .menu {
+    padding-left: 0;
+  }
+
+  .copy {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
   }
 }
