--- a/src/styles/blocks/revelant.scss
+++ b/src/styles/blocks/revelant.scss
@@ -2,8 +2,9 @@
   max-width: 1170px;
   margin: 0 auto;
 
-  @media (max-width: 700px) {
-    margin-top: 300px;
+  @media (max-width: 750px) {
+    margin-top: 400px;
+    width: 93%;
   }
 
   @media (min-width: 1600px) {
@@ -32,7 +33,7 @@
 
   @media (max-width: 1210px) {
     grid-template-columns: 1fr;
-    grid-template-rows: 1fr 0.5fr ;
+    grid-template-rows: 1fr 0.5fr;
   }
 
   &__second {
@@ -62,6 +63,11 @@
 
     @media (max-width: 1210px) {
       max-width: 700px;
+    }
+
+    @media (max-width: 750px) {
+      width: 100%;
+      height: 100%;
     }
   }
 
@@ -103,6 +109,12 @@
       font-weight: 400;
       position: relative;
 
+      @media (max-width: 750px) {
+        margin-bottom: 10px;
+        font-size: 28px;
+      
+      }
+
       &::after {
         content: "";
         margin-left: 25px;
@@ -112,6 +124,10 @@
         width: 15px;
         height: 15px;
         background-color: #f14a27;
+
+        @media (max-width: 750px) {
+          margin-left: 20px;
+        }
       }
     }
 
