--- a/src/styles/blocks/subscribe.scss
+++ b/src/styles/blocks/subscribe.scss
@@ -66,5 +66,36 @@
     color: #fff;
     border: none;
     cursor: pointer;
+    transition: transform 0.3s ease;
+
+    &:hover {
+      transform: scale(1.1);
+    }
+  }
+}
+
+@media (max-width: 750px) {
+  .container {
+    width: 300px;
+
+    &__title {
+      font-size: 36px;
+      font-weight: 700;
+    }
+
+    &__subtitle {
+      text-align: center;
+      justify-self: center;
+      align-items: center;
+      margin-bottom: 48px;
+    }
+  }
+
+  .form__search {
+    height: 50px;
+  }
+
+  .form__button {
+    height: 50px;
   }
 }
