--- a/src/styles/blocks/gallery.scss
+++ b/src/styles/blocks/gallery.scss
@@ -10,6 +10,10 @@
     max-width: 700px;
   }
 
+  @media (max-width: 750px) {
+    width: 93%;
+  }
+
   &__title {
     font-size: 48px;
     font-weight: 700;
@@ -34,6 +38,11 @@
     @media (max-width: 1210px) {
       grid-template-columns: 1fr 1fr;
     }
+
+    @media (max-width: 750px) {
+      grid-template-columns: 280px;
+      grid-auto-flow: 4410px;
+    }
     &-image {
       display: flex;
       object-position: center;
@@ -41,6 +50,7 @@
       width: 100%;
       height: 100%;
     }
+
   }
 
   &__wrapper-2 {
@@ -97,7 +107,13 @@
     }
   }
 
-  @media (max-width : 1210px) {
+  @media (max-width: 1210px) {
     display: flex;
+  }
+}
+
+@media (max-width: 750px) {
+  .visible {
+    display: none;
   }
 }
