--- a/src/styles/blocks/header.scss
+++ b/src/styles/blocks/header.scss
@@ -2,14 +2,15 @@
   display: flex;
   width: 100%;
   justify-content: center;
+  align-items: center;
 
   &__checkbox {
     display: none;
+    z-index: 10;
   }
   &__label {
     display: flex;
     justify-content: space-between;
-    margin-top: 45px;
     width: 1170px;
 
     @media (min-width: 1600px) {
@@ -23,20 +24,27 @@
     @media (max-width: 750px) {
       width: 280px;
     }
+  }
+}
 
-    &-burger {
-      background-image: url(../photo/svg/burger.svg);
-      background-repeat: no-repeat;
-      background-position: center;
-      background-size: cover;
-      height: 12px;
-      width: 18px;
-      cursor: pointer;
-      z-index: 2;
-      transition: transform 0.4s ease;
-      &:hover {
-        transform: scale(1.2);
-      }
+.burger {
+  padding: 20px;
+  z-index: 1;
+  cursor: pointer;
+
+  &__image {
+    background-image: url(../photo/svg/burger.svg);
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: cover;
+    height: 12px;
+    width: 18px;
+    cursor: pointer;
+    transition: transform 0.4s ease;
+    z-index: 1;
+
+    &:hover {
+      transform: scale(1.2);
     }
   }
 }
@@ -52,7 +60,7 @@
   box-shadow: 0 2px rgba(26, 90, 76, 0.25);
   transform: translateY(-100%);
   opacity: 0;
-  z-index: 0;
+  z-index: 2;
   transition: transform 0.5s;
   display: flex;
   justify-content: center;
@@ -119,6 +127,7 @@
 }
 
 @media (max-width: 750px) {
+
   .nav__list {
     align-items: center;
   }
