--- a/src/styles/blocks/main.scss
+++ b/src/styles/blocks/main.scss
@@ -7,7 +7,7 @@
   width: 100%;
   height: 655px;
   display: grid;
-  grid-template-columns: 1fr 1.3fr;
+  grid-template-columns: 1fr 2fr;
   justify-content: center;
   position: relative;
 
@@ -37,71 +37,81 @@
   }
 
   &__content {
-    position: absolute;
-    top: 50%;
-    transform: translateY(-30%);
-    left: -265px;
+    position: relative;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: flex-end;
 
     &-name {
+      margin-right: -120px;
       font-size: 72px;
       font-weight: 700;
       margin-bottom: 80px;
-
+      z-index: 1;
       &-opacity {
         color: rgba($color: #000, $alpha: 0);
         -webkit-text-stroke-width: 1px;
         -webkit-text-stroke-color: black;
       }
     }
+  }
+}
 
-    &-button {
-      width: 150px;
-      height: 70px;
-      font-size: 16px;
-      font-weight: 500;
-      border: 1px solid #1a5a4c;
-      text-decoration: none;
-      color: black;
+.button {
+  display: flex;
+  width: 260px;
+
+  &__buy {
+    align-self: center;
+    width: 150px;
+    height: 70px;
+    font-size: 16px;
+    font-weight: 500;
+    border: 1px solid #1a5a4c;
+    text-decoration: none;
+    color: black;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    position: relative;
+    transition: background-color 0.3s ease;
+
+    &:hover {
+      background-color: #1a5a4c;
+      color: white;
+    }
+
+    &::after {
+      position: absolute;
       display: flex;
       justify-content: center;
       align-items: center;
-      position: relative;
-      z-index: 10;
-
-      &:hover {
-        background-color: #1a5a4c;
-        color: white;
-      }
-
-      &::after {
-        position: absolute;
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        content: ">";
-        height: 70px;
-        width: 70px;
-        color: white;
-        font-size: 20px;
-        background-color: #1a5a4c;
-        right: -70px;
-      }
+      content: ">";
+      height: 70px;
+      width: 70px;
+      color: white;
+      font-size: 20px;
+      background-color: #1a5a4c;
+      right: -70px;
     }
   }
 }
 
 @media (max-width: 750px) {
   .museum {
-    display: flex;
-    flex-direction: column;
-  
+    grid-template-columns: 1fr;
+    grid-template-rows: 2fr 1fr;
+    grid-auto-rows: 300px;
+  }
+
+  .museum__photo {
+    order: -1;
   }
 
   .museum__photo-image {
-    position: sticky;
-    top: -40px;
     width: 100%;
-    background-size: contain;
+    background-size: cover;
   }
 
   .museum__photo-text {
@@ -111,17 +121,31 @@
   }
 
   .museum__content {
-    display: block;
+    display: flex;
     position: relative;
-    margin-top: 0;
+    justify-content: center;
+    align-items: center;
 
     &-name {
+      padding-top: 10px;
+      text-align: center;
+      margin-right: 0;
       font-size: 48px;
       font-weight: 700;
 
       &-opacity {
         color: #000;
+        -webkit-text-stroke-width: 0;
       }
+    }
+  }
+
+  .button {
+    justify-content: start;
+    width: 93%;
+
+    &__buy {
+      width: 82%;
     }
   }
 }
