--- a/src/styles/blocks/footer.scss
+++ b/src/styles/blocks/footer.scss
@@ -22,7 +22,7 @@
     grid-template-columns: 1fr 1fr;
     grid-template-rows: 80px 300px 200px 1px 300px;
     gap: 10px;
-    padding: 0 10px;
+    padding: 0 20px;
   }
 
   &__icons {
@@ -104,6 +104,24 @@
     @media (max-width: 621px) {
       grid-column: 1 / 3;
       grid-row: 3 / 4;
+      position: relative;
+    }
+  }
+
+  &__scroll-up {
+
+    display: none;
+
+    @media (max-width: 621px) {
+      display: block;
+      position: absolute;
+      bottom: 15px;
+      right: 0;
+      width: 51px;
+      height: 51px;
+      background-image: url("../images/arrow-up.svg");
+      background-repeat: no-repeat;
+      background-position: center;
     }
   }
 
