--- a/src/styles/blocks/header.scss
+++ b/src/styles/blocks/header.scss
@@ -17,8 +17,15 @@
     padding-left: 20px;
   }
 
+  &__nav {
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+  }
+
   &__hamburger-wrapper {
-    padding-top: 40px;
+    padding-top: 32px;
     height: 100%;
     display: flex;
     flex-direction: column;
@@ -36,7 +43,12 @@
     background-repeat: no-repeat;
     background-position: center;
     cursor: pointer;
-    z-index: 1;
+    z-index: 2;
+
+    &--close {
+      background-image: url("../images/icon-close.svg");
+      background-color: #1a5a4c;
+    }
   }
 
   &__side {
@@ -138,6 +150,7 @@
     bottom: 120px;
     left: -299px;
     display: flex;
+    transition: 0.2s;
 
     @media (max-width: 1000px) {
       bottom: 10px;
@@ -150,6 +163,11 @@
       right: 0;
       width: 296px;
       margin: 0 auto;
+    }
+
+    &:hover {
+      background-color: #1a5a4c;
+      color: #fff;
     }
   }
 
