--- a/src/styles/blocks/subscription.scss
+++ b/src/styles/blocks/subscription.scss
@@ -79,10 +79,15 @@
     display: flex;
     justify-content: center;
     align-items: center;
+    transition: 0.2s;
 
     @media (max-width: 621px) {
       width: 50px;
       height: 50px;
+    }
+
+    &:hover {
+      background-color: #f47c62;
     }
   }
 
