--- a/src/styles/blocks/gallery.scss
+++ b/src/styles/blocks/gallery.scss
@@ -63,6 +63,11 @@
 
   &__picture {
     object-fit: cover;
+    transition: 0.5s;
+
+    &:hover {
+      transform: scale(1.07);
+    }
 
     @media (max-width: 1290px) {
       width: 340px;
