--- a/src/styles/blocks/event.scss
+++ b/src/styles/blocks/event.scss
@@ -18,6 +18,11 @@
     object-fit: cover;
     width: 55%;
     height: 520px;
+    transition: 0.5s;
+
+    &:hover {
+      transform: scale(1.07);
+    }
 
     @media (max-width: 1000px) {
       width: 100%;
@@ -60,7 +65,6 @@
     font-size: 36px;
     font-weight: 400;
     margin-bottom: 15px;
-    // line-height: 100%;
     display: inline-block;
     position: relative;
 
