--- a/src/styles/blocks/header.scss
+++ b/src/styles/blocks/header.scss
@@ -44,6 +44,11 @@
     background-position: center;
     cursor: pointer;
     z-index: 2;
+    transition: 0.5s;
+
+    &:hover {
+      transform: scale(1.2);
+    }
 
     &--close {
       background-image: url("../images/icon-close.svg");
