--- a/src/styles/blocks/subscribe.scss
+++ b/src/styles/blocks/subscribe.scss
@@ -67,6 +67,7 @@
     border: none;
     cursor: pointer;
     transition: transform 0.3s ease;
+    border-radius: 4px;
 
     &:hover {
       transform: scale(1.1);
