--- a/src/styles/blocks/about.scss
+++ b/src/styles/blocks/about.scss
@@ -23,6 +23,7 @@
   }
 
   &__text {
+    margin-bottom: 60px;
     font-family: "IBM Plex Sans", sans-serif;
     font-style: normal;
     font-weight: 300;
