--- a/src/styles/blocks/description.scss
+++ b/src/styles/blocks/description.scss
@@ -65,7 +65,8 @@
 
 @media (max-width: 1024px) {
   .description {
-    background-size: 90% 50%;
+    height: 400px;
+    background-size: 90% 80%;
     background-position: center center;
 
     &__info {
@@ -81,7 +82,7 @@
     &__info {
       width: 300px;
       height: 154px;
-      margin-bottom: 240px;
+      margin-bottom: 150px;
       padding: 20px 25px;
     }
 
@@ -108,7 +109,7 @@
     background-position: top;
 
     &__info {
-      margin-bottom: 350px;
+      margin-bottom: 150px;
     }
   }
 }
