--- a/src/styles/blocks/footer.scss
+++ b/src/styles/blocks/footer.scss
@@ -72,7 +72,7 @@
       grid-template-columns: 1fr;
       grid-template-rows: repeat(2, 1fr);
 
-      padding-bottom: 84px;
+      padding-bottom: 0;
     }
 
     &__contacts {
@@ -100,7 +100,7 @@
       display: flex;
       justify-content: space-around;
       align-items: center;
-      margin-bottom: 40px;
+      margin: 40px 0;
 
       grid-area: icons;
     }
