--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -13,3 +13,5 @@
 @import "./blocks/timetable.scss";
 @import "./blocks/contacts.scss";
 @import "./blocks/nav.scss";
+@import "./blocks/menu.scss";
+@import "./blocks/nav-top.scss";
