--- a/src/styles/blocks/header.scss
+++ b/src/styles/blocks/header.scss
@@ -1,6 +1,7 @@
 .header {
 
   &__section {
+    position: relative;
     display: grid;
     grid-template-columns: 675px 3fr;
 
@@ -17,6 +18,22 @@
     position: relative;
     z-index: -1;
     right: 0;
+  }
+
+  &__menu-toggler {
+    position: relative;
+    top: -50%;
+    left: 0;
+    z-index: 3;
+    height: 24px;
+    width: 24px;
+    cursor: pointer;
+    background-image: url(../images/munu.svg);
+    background-repeat: no-repeat;
+
+    &--active {
+      background-image: url(../images/menu-close.svg);
+    }
   }
 
   &__text {
@@ -111,6 +128,8 @@
     font-weight: bold;
     font-size: 36px;
     line-height: 100%;
+    text-decoration: none;
+    color: #0f0e08;
   }
 }
 
@@ -147,6 +166,11 @@
     &__link {
       left: 34px;
     }
+
+    &__menu-toggler {
+      top: -140%;
+      left: -80px;
+    }
   }
 }
 
@@ -167,7 +191,7 @@
 
     &__title {
       font-size: 45px;
-      text-align: center;
+      text-align: start;
     }
 
     &__title-transparent {
@@ -178,7 +202,6 @@
 
     &__link {
       top: 145px;
-      left: 20px;
     }
 
     &__link-text {
@@ -192,6 +215,11 @@
     &__logo {
       left: calc(50% - 27px);
       font-size: 30px;
+    }
+
+    &__menu-toggler {
+      top: -350px;
+      left: 50px;
     }
   }
 }
