--- a/src/styles/blocks/gallery.scss
+++ b/src/styles/blocks/gallery.scss
@@ -42,6 +42,7 @@
     @media (max-width: 750px) {
       grid-template-columns: 280px;
       grid-auto-flow: 4410px;
+      justify-content: center;
     }
     &-image {
       display: flex;
