--- a/src/styles/blocks/revelant.scss
+++ b/src/styles/blocks/revelant.scss
@@ -32,6 +32,7 @@
   grid-template-columns: 1.3fr 1fr;
 
   @media (max-width: 1210px) {
+    margin: 0 auto;
     grid-template-columns: 1fr;
     grid-template-rows: 1fr 0.5fr;
   }
@@ -62,6 +63,7 @@
     }
 
     @media (max-width: 1210px) {
+      width: 100%;
       max-width: 700px;
     }
 
