--- a/src/styles/blocks/header.scss
+++ b/src/styles/blocks/header.scss
@@ -11,6 +11,10 @@
     margin: 0 auto;
     padding: 15px 20px;
 
+    @media (max-width: 1610px) {
+      padding: 15px 0;
+    }
+
     @media (max-width: $large-screen-breakpoint) {
       height: 275px;
     }
