--- a/src/styles/blocks/lecture.scss
+++ b/src/styles/blocks/lecture.scss
@@ -30,7 +30,7 @@
   &--wrapper {
     margin-bottom: 316px;
 
-    @media (max-width: $small-screen-breakpoint) {
+    @media (max-width: $large-screen-breakpoint) {
       margin-bottom: 200px;
     }
   }
