--- a/src/styles/blocks/nav.scss
+++ b/src/styles/blocks/nav.scss
@@ -30,6 +30,10 @@
     color: $main-text-color;
 
     transition: all 0.4s cubic-bezier(0.2, 0, 0, 1);
+
+    @media (max-width: $medium-screen-breakpoint) {
+      padding: 10px;
+    }
     
     &:after {
       content: "";
