--- a/src/styles/blocks/subscription.scss
+++ b/src/styles/blocks/subscription.scss
@@ -56,6 +56,7 @@
     background-repeat: no-repeat;
     border: 2px solid transparent;
     transition: $hover-durations;
+    cursor: pointer;
 
     &:before {
       content: "";
