--- a/src/styles/blocks/subscribe.scss
+++ b/src/styles/blocks/subscribe.scss
@@ -1,5 +1,5 @@
 .subscribe {
-  height: 650px;
+  height: 386px;
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -10,49 +10,68 @@
   background-position: center;
 
   &__heading {
-    margin-bottom: 20px;
-    @extend %Montserrat;
-    font-size: 48px;
-    font-weight: 700;
-    line-height: 100%;
+    @extend %h2;
     color: $whiteColor;
   }
 
   &__text {
-    margin-bottom: 66px;
-    @extend %IBM;
-    font-size: 18px;
-    font-weight: 400;
-    line-height: 18px;
-    color: $whiteColor;
+    margin-bottom: 50px;
+    max-width: 70%;
+    text-align: center;
+    @extend %IBM-subscr;
   }
 
   &__form {
     display: flex;
-    gap: 30px;
   }
 
   &__input {
-    width: 470px;
-    height: 70px;
-    padding: 28px 35px;
-    @extend %Montserrat;
-    font-size: 14px;
-    font-weight: 400;
-    line-height: 14px;
-    color: $greyColor;
-    outline: none;
+    width: 233px;
+    height: 50px;
+    padding: 18px 31px;
   }
 
   &__button {
-    width: 70px;
-    height: 70px;
+    width: 50px;
+    height: 50px;
     background-color: $orangeColor;
     border: 1px solid transparent;
     outline: none;
     &:hover {
       transform: scale(1.03);
       background-color: #db4123;
+    }
+  }
+
+  @media (min-width: 767px) {
+    &__form {
+      gap: 10px;
+    }
+
+    &__text {
+      margin-bottom: 66px;
+    }
+
+    &__input {
+      width: 395px;
+      height: 70px;
+      padding: 18px 31px;
+    }
+
+    &__button {
+      width: 70px;
+      height: 70px;
+    }
+  }
+
+  @media (min-width: 1279px) {
+    height: 550px;
+    &__form {
+      gap: 30px;
+    }
+
+    &__input {
+      font-size: 16px;
     }
   }
 }
