--- a/src/styles/utils/_extends.scss
+++ b/src/styles/utils/_extends.scss
@@ -1,9 +1,111 @@
-%Montserrat {
+@import "utils/variables";
+
+%h1 {
   font-family: Montserrat, sans-serif;
+  font-weight: 700;
+  font-size: 45px;
+  line-height: 100%;
+  color: $blackColor;
+  text-transform: uppercase;
+  @media(min-width: 767px) {
+    font-size: 55px;
+  }
+  @media(min-width: 1279px) {
+    font-size: 72px;
+  }
+}
+
+%h2 {
+  font-family: Montserrat, sans-serif;
+  font-weight: 700;
+  font-size: 36px;
+  line-height: 100%;
+  color: $letterColor;
+  @media(min-width: 767px) {
+    font-size: 48px;
+  }
+}
+
+%h3 {
+  font-family: Montserrat, sans-serif;
+  font-weight: 400;
+  font-size: 28px;
+  line-height: 100%;
+  color: $letterColor;
+  @media(min-width: 767px) {
+    font-size: 36px;
+  }
+}
+
+%head-nav {
+  font-family: Montserrat, sans-serif;
+  font-size: 14px;
+  line-height: 100%;
   font-weight: 400;
 }
 
-%IBM {
+%IBM-link {
   font-family: IBM Plex Sans, sans-serif;
+  font-size: 16px;
+  line-height: 100%;
+  font-weight: 500;
+  text-transform: uppercase;
+}
+
+%IBM-header-link {
+  font-family: IBM Plex Sans, sans-serif;
+  font-size: 14px;
+  line-height: 150%;
+  font-weight: 600;
+}
+
+%IBM-text {
+  font-family: IBM Plex Sans, sans-serif;
+  font-size: 16px;
+  line-height: 150%;
+  font-weight: 300;
+  color: $thinGreyColor;
+}
+
+%IBM-footer {
+  font-family: IBM Plex Sans, sans-serif;
+  font-size: 14px;
+  line-height: 150%;
   font-weight: 400;
+  color: $letterColor;
+}
+
+%IBM-decor {
+  font-family: IBM Plex Sans, sans-serif;
+  font-size: 16px;
+  line-height: 100%;
+  font-weight: 700;
+  text-transform: uppercase;
+  color: $greyColor;
+  @media (min-width: 1279px) {
+    font-size: 14px;
+  }
+}
+
+%IBM-subscr {
+  font-family: IBM Plex Sans, sans-serif;
+  font-size: 18px;
+  line-height: 150%;
+  font-weight: 400;
+  color: $whiteColor;
+  @media (min-width: 767px) {
+    line-height: 100%;
+  }
+}
+
+%IBM-descipt {
+  font-family: IBM Plex Sans, sans-serif;
+  font-size: 16px;
+  line-height: 100%;
+  font-weight: 500;
+  text-transform: uppercase;
+  color: $greyColor;
+  @media (min-width: 767px) {
+    font-size: 14px;
+  }
 }
