--- a/src/styles/blocks/button.scss
+++ b/src/styles/blocks/button.scss
@@ -1,46 +1,44 @@
 .button {
   display: flex;
-  flex-direction: row-reverse;
-  justify-content: center;
-  align-items: center;
-  width: 220px;
-  margin-top: 80px;
-  text-align: center;
-  border: 1px solid $greenColor;
-  :hover {
-    background-color: $greenColor;
-    color: $lightgreyColor;
-  }
 
-  &__buy-field {
-    display: block;
+  &__text {
+    display: flex;
     justify-content: center;
     align-items: center;
-    @extend %IBM;
-    font-size: 16px;
-    font-weight: 500;
-    height: 70px;
-    width: 150px;
+    width: 230px;
+    height: 50px;
+    @extend %IBM-link;
     color: $letterColor;
     background-color: $whiteColor;
-    border: 5 solid $greenColor;
+    border: 1px solid $greenColor;
     transition: background-color, 0.8s;
   }
 
-  &__buy-arrow {
-    font-size: 16px;
-    height: 70px;
-    width: 70px;
+  &__arrow {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 50px;
+    width: 50px;
     background-color: $greenColor;
     color: $lightgreyColor;
-    &:hover + * {
-      background-color: $greenColor;
-      color: $lightgreyColor;
+  }
+
+  @media (min-width: 767px) {
+    &__text {
+      width: 150px;
+      height: 70px;
+    }
+    &__arrow {
+      width: 70px;
+      height: 70px;
     }
   }
 
-  &__arrow-subscr {
-    width: 24px;
-    height: 24px;
+  &:hover {
+    .button__text {
+      color: $whiteColor;
+      background-color: $greenColor;
+    }
   }
 }
