--- a/src/styles/blocks/container.scss
+++ b/src/styles/blocks/container.scss
@@ -1,5 +1,21 @@
 .container {
-  max-width: 1440px;
   margin: 0 auto;
   padding: 0 20px;
+  max-width: 1570px;
+
+  @media (min-width: 767px) {
+    padding: 0 34px;
+  }
+
+  @media (min-width: 1279px) {
+    padding: 0 55px;
+  }
+
+  @media (min-width: 1440px) {
+    padding: 0 136px;
+  }
+
+  @media (min-width: 1670px) {
+    padding: 0;
+  }
 }
