--- a/src/styles/blocks/exhibition.scss
+++ b/src/styles/blocks/exhibition.scss
@@ -1,24 +1,8 @@
 .exhibition {
-  display: flex;
-  flex-direction: column;
-  &__1 {
-    display: grid;
-    grid-template-columns: (870px 1fr);
-    gap: 130px;
-    justify-content: center;
-    align-content: center;
-    margin-bottom: 100px;
-  }
-  &__2 {
-    display: grid;
-    grid-template-columns: (1fr 870px);
-    justify-content: start;
-    gap: 130px;
-    margin-bottom: 100px;
-  }
-  &__photo {
-    height: 520px;
-    min-width: 100%;
+  &__img {
+    margin-bottom: 20px;
+    width: 100%;
+    height: 65vw;
     transition: 3s;
     &:hover {
       transition: 0.6s;
@@ -27,61 +11,90 @@
     }
   }
 
-  &__description {
-    &--1 {
-      justify-content: center;
-
-      align-items: center;
-    }
-    &--2 {
-      align-items: center;
-    }
-  }
-
-  &__time {
-    margin-bottom: 32px;
-  }
-  &__fact {
-    @extend %IBM;
-    font-weight: 500;
-    color: $greyColor;
-    font-size: 14px;
-    line-height: 14px;
-    text-transform: uppercase;
-  }
-  &__date {
-    padding-left: 26px;
-    @extend %IBM;
-    font-weight: 700;
-    color: $greenColor;
-    font-size: 14px;
-    line-height: 21px;
-  }
-  &__title {
+  &__heading {
     position: relative;
-    margin-bottom: 15px;
-    @extend %Montserrat;
-    font-weight: 400;
-    font-size: 36px;
-    line-height: 100%;
+    margin-bottom: 10px;
+    width: fit-content;
+    @extend %h3;
     color: $letterColor;
     &::after {
       content: "";
       position: absolute;
-      width: 15px;
-      height: 15px;
-      right: 0;
+      width: 10px;
+      height: 10px;
+      right: -30px;
       top: 50%;
-      transform: translateY(-50%);
+      transform: translateY(-20%);
       background-color: $orangeColor;
     }
   }
-  &__narrative {
-    width: 370px;
-    @extend %IBM;
-    font-size: 16px;
-    line-height: 24px;
-    font-weight: 300;
+
+  &__description {
+    margin-bottom: 15px;
+    width: 100%;
+  }
+
+  &__text {
+    @extend %IBM-text;
     color: $thinGreyColor;
+  }
+
+  @media (min-width: 767px) {
+    &__img {
+      margin-bottom: 35px;
+      height: 520px;
+    }
+
+    &__heading {
+      margin-bottom: 15px;
+    }
+
+    &__description {
+      justify-content: flex-start;
+      margin-bottom: 30px;
+      gap: 26px;
+    }
+
+    &__text {
+      width: 370px;
+    }
+  }
+
+  @media (min-width: 980px) {
+    display: flex;
+    justify-content: space-between;
+    gap: 70px;
+
+    &__img {
+      width: 53%;
+      object-fit: cover;
+    }
+
+    &__content {
+      padding-top: 50px;
+    }
+
+    &_reverse {
+      .exhibition__img {
+        order: 2;
+      }
+    }
+  }
+
+  @media (min-width: 1279px) {
+    gap: 130px;
+  }
+
+  @media (min-width: 1670px) {
+    align-items: center;
+
+    &__img {
+      width: 870px;
+    }
+
+    &__content {
+      width: 370px;
+      padding: 0;
+    }
   }
 }
