--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -1,19 +1,18 @@
 @import "./blocks/reset.scss";
 @import "../normalize.scss";
 @import "utils/extends";
-@import "utils/fonts";
 @import "utils/variables";
 @import "./blocks/header.scss";
 @import "./blocks/page.scss";
 @import "./blocks/nav.scss";
 @import "./blocks/button.scss";
-@import "./blocks/main.scss";
 @import "./blocks/events.scss";
 @import "./blocks/exhibition.scss";
-@import "./blocks/middle-part.scss";
 @import "./blocks/gallery.scss";
-@import "./blocks/pictures.scss";
 @import "./blocks/footer.scss";
 @import "./blocks/subscribe.scss";
 @import "./blocks/container.scss";
-@import "./blocks/footer-nav.scss";
+@import "./blocks/hero.scss";
+@import "./blocks/logo.scss";
+@import "./blocks/description.scss";
+@import "./blocks/promo.scss";
