--- a/src/styles/_fonts.scss
+++ b/src/styles/_fonts.scss
@@ -1,6 +1,9 @@
 @font-face {
-  font-family: "Roboto";
-  src: url("../fonts/Roboto-Regular-webfont.woff") format("woff");
-  font-weight: normal;
-  font-style: normal;
+  font-family: "Montserrat", sans-serif;
+  @import url(https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap);
+}
+
+@font-face {
+  font-family: "IBM Plex Sans", sans-serif;
+  src: url(https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:wght@300;400;500;600;700&display=swap);
 }
